more work trying to add multiple notes, and pagination

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -52,7 +52,7 @@ $color_footer: grey;
         top-left-radius: 2px;
         top-right-radius: 2px; }; } }
   #jumpbox {
-    background: #ff8b45;
+    background: #2e2e2e;
     margin: 2px 0px 0px 0px;
     padding: 12px;
     position: absolute;
