Fixing leads page when we filter or try to add a new lead

--- a/app/views/leads/_edit.html.haml
+++ b/app/views/leads/_edit.html.haml
@@ -26,13 +26,16 @@
 
 :javascript
   var closePopUpButton = document.getElementById('closePopUp');
+  var popupContent = document.querySelector('#edit_lead');
 
   if (closePopUpButton) {
     closePopUpButton.addEventListener('click', function() {
       var popupContainer = document.getElementById('editLeadPopup');
       if (popupContainer) {
-        
+
         popupContainer.classList.remove('show');
+        popupContent.innerHTML = '';
+        popupContent.style.display = 'none';
       }
     });
 
