--- a/app/views/contacts/_edit.html.haml
+++ b/app/views/contacts/_edit.html.haml
@@ -1,6 +1,6 @@
 .remote
   = simple_form_for(@contact, html: one_submit_only, remote: true) do |f|
-    = link_to_close edit_contact_path(@contact)
+    = link_to_close edit_contact_path(@contact), @contact.id
     = f.hidden_field :user_id
 
     = f.error_messages object_name: t('contact')
